Updates hero graphic and sub-text

--- a/assets/less/tbpro-style.less
+++ b/assets/less/tbpro-style.less
@@ -64,11 +64,19 @@ header#masthead {
     }
 
     p {
-        font-family: var(--font-titles);
+        font-family: 'Inter', sans-serif;
+        font-size: 1rem;
+        font-weight: 400;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: 1.32;
+        letter-spacing: normal;
         margin-block: @space-6;
         @media (min-width: @md) {
             grid-row: 3;
             grid-column: 1 / span 2;
+            font-size: 1.25rem;
+            line-height: 1.75;
         }
     }
 
