Uses draft of Bolt button styles

--- a/assets/less/tbpro/base.less
+++ b/assets/less/tbpro/base.less
@@ -1,6 +1,7 @@
 // Base
 @import "fonts.less";
 @import "colours.less";
+@import "buttons.less";
 
 // ------------------------------------------------------------
 // border-box, everywhere
