--- a/sites/tb.pro/includes/macros/subscription-plan.html
+++ b/sites/tb.pro/includes/macros/subscription-plan.html
@@ -4,7 +4,7 @@
     <h3>{{ plan_name }}</h3>
     <p>{{ plan_description }}</p>
     <h4><b>${{ plan_price }}</b> {{ plan_period }}</h4>
-    <button class="link-button">Subscribe Now</button>
+    <button class="button-brand-small-outline-label">Subscribe Now</button>
   </div>
   <ul>
     <li>
