--- a/assets/less/tbpro/fonts.less
+++ b/assets/less/tbpro/fonts.less
@@ -338,3 +338,15 @@
         1.2
     );
 }
+
+
+// For nav bar on desktop
+.nav-item-desktop() {
+    .mixin-font-styles(
+        @family-metropolis,
+        600,
+        0.8125rem,
+        1,
+        0.05em
+    );
+}
